# lib/db/src/schema/index.ts
@@ -4,3 +4,4 @@ export * from "./sessions";
 export * from "./reps";
 export * from "./friend-requests";
 export * from "./shoutouts";
+export * from "./mobility";
